CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

IF(NOT DEFINED ENV{Qt6_DIR})
    MESSAGE(FATAL, "Qt6_DIR not found")
ELSE()
    SET(CMAKE_PREFIX_PATH $ENV{Qt6_DIR})
ENDIF()

SET(PROJECT_BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

PROJECT(YourApp)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core Widgets)

QT_STANDARD_PROJECT_SETUP()
QT_ADD_EXECUTABLE(
    YourApp
    source/main.cpp
)

TARGET_LINK_LIBRARIES(YourApp PRIVATE Qt6::Core)
TARGET_LINK_LIBRARIES(YourApp PRIVATE Qt6::Widgets)

IF(MSVC)
    SET_TARGET_PROPERTIES(YourApp PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
ENDIF(MSVC)

ADD_CUSTOM_COMMAND(
    TARGET YourApp
    POST_BUILD
    COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} YourApp.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
    )